# CppND-Capstone-Software-Updater

./: CMakeLists.txt  README.md
files/: available_sw_list.txt
src/: Software.cpp  Software.h  SoftwareInfoManager.cpp  SoftwareInfoManager.h  SoftwareUpdater.cpp  SoftwareUpdater.h  SoftwareUpdaterGui.cpp  SoftwareUpdaterGui.h
